fix contrast errors

--- a/desktop_style.css
+++ b/desktop_style.css
@@ -13,7 +13,7 @@
 
   button:hover {
     cursor: pointer;
-    background: #6070ff;
+    background: #5263FF;
   }
 
   button:active {
@@ -53,7 +53,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
-    color: #6070ff;
+    color: #5263FF;
   }
 
   .menu_bar {
@@ -106,7 +106,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #7f8cff;
+    color: #5263FF;
   }
 
   .social-media-icons {
@@ -226,7 +226,7 @@
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.03em;
-    color: #6070ff;
+    color: #5263FF;
   }
 
   .tags button {
@@ -234,7 +234,7 @@
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.03em;
-    color: #6070ff;
+    color: #3D51FF;
     border-radius: 8px;
     background: #ebebff;
     border: none;
@@ -246,9 +246,9 @@
     font-size: 17px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    color: #396df2;
+    color: #2861F0;
     padding: 12px;
-    border: 1px solid #6070ff;
+    border: 1px solid #5263FF;
     border-radius: 8px;
   }
 
@@ -286,7 +286,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #7f8cff;
+    color: #5263FF;
   }
 
   .split {
@@ -334,9 +334,9 @@
     font-size: 17px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    color: #396df2;
+    color: #2660F2;
     margin-top: 12px;
-    border: 1px solid #6070ff;
+    border: 1px solid #5263FF;
     border-radius: 8px;
     width: 162px;
     height: 48px;
@@ -382,7 +382,7 @@
     align-items: center;
     margin-top: 134px;
     height: 779px;
-    background: #6070ff;
+    background:#5263FF;
     background-size: cover;
     background-image: url(./images/contact_form_background_shapes_desktop.svg);
     border-top-left-radius: 60px;
@@ -403,7 +403,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
-    color: #ebebff;
+    color: #FFFFFF;
     text-align: center;
     margin: 0 24px 24px 24px;
     width: 39.513vw;
@@ -415,7 +415,7 @@
     align-items: center;
   }
 
-  .field {
+  #user-name {
     background: #fff;
     border: 1px solid #cfd8dc;
     padding: 15px 16px 15px 16px;
@@ -426,11 +426,23 @@
     width: 31.041vw;
   }
 
-  .field:hover {
-    transform: translateX(10px);
+  #user-email {
+      background: #fff;
+      border: 1px solid #cfd8dc;
+      padding: 15px 16px 15px 16px;
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 20px;
+      margin: 10px 24px 10px 24px;
+      width: 31.041vw;
+    }
+
+  #user-name:hover, 
+  #user-email:hover {
+      transform: translateX(10px);
   }
 
-  .field3 {
+  #field3 {
     background: #fff;
     border: 1px solid #cfd8dc;
     padding: 15px 16px 15px 16px;
@@ -454,7 +466,7 @@
     margin-top: 10px;
     border: none;
     letter-spacing: 0.03em;
-    color: #6070ff;
+    color: #5263FF;
     font-weight: 500;
     font-size: 17px;
     line-height: 24px;
@@ -462,6 +474,10 @@
   }
 
   .home_indicator {
+    display: none;
+  }
+
+  label {
     display: none;
   }
 }
